--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -17,15 +17,15 @@
 
   <!-- Icons -->
   <!-- https://favicon.io/ -->
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | url }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
-  <link rel="manifest" href="{{ '/site.webmanifest' | url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 
   <title></title>
 
-  <link rel="stylesheet" href="{{ '/index.css' | url }}">
+  <link rel="stylesheet" href="/index.css">
 </head>
 
 <body class="font-sans leading-normal tracking-normal text-gray-900">
