add some basic content/sections

--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -22,6 +22,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Staatliches&display=swap" rel="stylesheet">
+
 
   <title></title>
 
@@ -32,18 +36,29 @@
 
   {{ content | safe }}
 
-  <footer class="bg-blue-50 h-96">
+  <footer class="bg-green-900 h-96 flex flex-col justify-center items-center">
 
   <div>
   <a>Discord</a>
   <a>Instagram</a>
   <a>GitHub</a>
-  <span>&copy; 2021 - Innovate Trent</span>
+  <a>Twitch</a>
+  <a>YouTube</a>
+  </div>
 
+  <div>
+  <span>&copy; 2021 - Innovate Trent</span>
+</div>
+
+<div>
   <span>Site design by <a href="https://overscore.media" target="_blank" rel="noopener nofollow noreferrer">OverScore Media</a>
+  </div>
 </div>
 
   </footer>
 
+  
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
